# humanitarian-multimodal

./: .gitignore  pyproject.toml
notebooks/: AircraftAcceptanceProbability.ipynb  LeaderModelOptimizer.ipynb  MNLRAircraftPredictionParameters.ipynb  MNLRAircraftType.ipynb  MNLRAircraftTypeWithF1Score.ipynb  SensitivityAnalysis (1).ipynb  data_analysis.ipynb  data_encoding.ipynb  nce.ipynb  plot_raw_data.ipynb  t100_analysis.ipynb
src/: MNLRAircraftPrediction.ipynb  SensitivityAnalysis.ipynb  acceptance_prediction.py  config_classifier.py  data_analysis.ipynb  data_processing.py  main.py  mcmc_testing.py  nce_model.py  predictive-elements.pkl  reproduce_with_stochastic_airlift.py  stoc_optimod.py  stochastic_airlift.py  unified_data_loader.py
