[tool.poetry]
package-mode = false

[project]
name = "humanitarian-multimodal"
version = "0.1.0"
description = ""
authors = [
    { name = "cubicalknight", email = "micah.borrero@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = ["numpy (>=2.3.4,<3.0.0)", "polars (>=1.34.0,<2.0.0)", "matplotlib (>=3.10.7,<4.0.0)", "pandas (>=2.3.3,<3.0.0)", "ipykernel (>=7.0.1,<8.0.0)", "gurobipy (>=12.0.3,<13.0.0)", "geopandas (>=1.1.1,<2.0.0)", "cartopy (>=0.25.0,<0.26.0)", "tqdm (>=4.67.1,<5.0.0)", "scikit-learn (>=1.8.0,<2.0.0)", "fastexcel (>=0.19.0,<0.20.0)", "pyarrow (>=23.0.0,<24.0.0)", "torch (>=2.10.0,<3.0.0)", "seaborn (>=0.13.2,<0.14.0)", "airportsdata (>=20250909,<20250910)", "optuna (>=4.7.0,<5.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
